--- a/Contatos.html
+++ b/Contatos.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contatos</title>
-    <link rel="stylesheet" href="/Capitao-Am-rica---Filme-2025/src/css/style-contato.css">
+    <link rel="stylesheet" href="./src/css/style-contato.css">
 </head>
 
 <body>
